[package]
name = "serverless-wasm"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/Geal/serverless-wasm"
readme = "README.md"
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>"]

[dependencies]
wasmi = "^0.1"
parity-wasm = "^0.27"
rouille = "^2.1"
slab = "^0.4"
toml = "^0.4"
serde = "^1.0"
serde_derive = "^1.0"
