[package]
name = "serverless-wasm"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/Geal/serverless-wasm"
readme = "README.md"
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>"]

[dependencies]
parity-wasm = "^0.27"
rouille = "^2.1"
slab = "^0.3"
toml = "^0.4"
serde = "^1.0"
serde_derive = "^1.0"
mio = "^0.6"
httparse = "^1.2"
#wasmi = "^0.1"
wasmi = { git = "https://github.com/geal/wasmi" }
#wasmi = { path = "../wasmi" }
cretonne = "*"
cretonne-wasm = "^0.8"
cretonne-module = "*"
cretonne-simplejit = "^0.8"
